--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Gentium+Basic:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;0,500;1,200&display=swap');
 .gallery-image img {
     width: 100%;
 }
 header .header-banner {
-    background-image: url("img/header.png");
     width: 100%;
     height: calc(100vh - 500px);
     background-repeat: no-repeat;
@@ -12,24 +10,29 @@ header .header-banner {
     background-size: cover;
     display: table;
 }
+.bänner img {
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
 
 header h1 {
-    font-family: "Gentium Basic", serif;
-    font-weight: 700;
-    font-style: italic;
-    font-size: 60px;
-    color: #ffffff;
+    font-family: "Raleway", serif;
+    font-weight: 400;
+    font-size: 50px;
+    color: #030303;
     line-height: 70px;
     text-transform: uppercase;
-    text-shadow: 2px 2px 8px #000000;
 }
 
 header h2 {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 300;
+    font-family: "Raleway", serif;
+    font-style: italic;
+    font-weight: 200;
     font-size: 15px;
-    letter-spacing: 5px;
-    color: #ffffff;
+    letter-spacing: 3px;
+    color: #111216;
     text-transform: uppercase;
 }
 
@@ -52,7 +55,7 @@ header nav ul li {
 }
 
 nav ul li a {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Raleway", serif;
     font-weight: 400;
     font-size: 18px;
     letter-spacing: 3px;
@@ -64,7 +67,7 @@ nav ul li a {
 footer {
     width: calc(100% - 80px);
     padding: 40px 40px;
-    background-color: #a5a7ac;
+    background-color: #c4c8d0;
     margin-top: 20px;
     overflow: hidden;
 }
@@ -80,25 +83,15 @@ footer ul {
 
 footer ul li {
     display: block;
-    padding: 0 0 10px 0;
+    padding: 0 0px 20px 0;
 }
 
-footer ul li p {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    letter-spacing: 2px;
-    color: #ffffff;
-    text-transform: uppercase;
-}
-
-footer ul li a {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
+footer ul li {
+    font-family: "Raleway", Serif;
+    font-weight: 200;
+    font-size: 10px;
     letter-spacing: 3px;
-    color: #ffffff;
-    text-transform: uppercase;
+    color: #080809;
     text-decoration: none;
 }
 .footer-sm {
@@ -110,13 +103,16 @@ footer ul li a {
     margin-bottom: 10px;
 }
 hr {
-    color: #4f5663;
+    border-color: #676d7a;
     border-width: 2px;
     width: 30%;
     margin: 0 auto;
-    margin-bottom: 5px;
 }
+.us p {
+    padding-left: 30px;
+    padding-right: 30px;
 
+}
 .gallery-h2 {
     font-family: "Gentium Basic", sans-serif;
     font-weight: 200;
@@ -150,9 +146,14 @@ hr {
     height: 100%;
     margin-left: -50px;
 }
+.container_2 p {
+    font-family: "Raleway", Serif;
+    font-weight: 200;
+    font-size: 16px;
+}
 .post-header {
     /*kujundus*/
-    font-family: "Open Sans", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 22px;
     letter-spacing: 3px;
@@ -178,36 +179,57 @@ hr {
     -o-flex-flow: row wrap;
     justify-content: center;
 }
+
 @media only screen and (min-width: 950px) {
     header .header-banner {
-        height: calc(100vh - 400px);
+        height: calc(100vh - 600px);
     }
-    header h1 a {
-        font-size: 80px;
+    header h1 {
+        font-size: 50px;
     }
     header h2 {
-        font-size: 24px;
-        margin-top: 20px;
+        font-size: 22px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+
     }
     header nav ul li {
         padding: 16px 42px;
     }
+    nav ul li a {
+        font-size: 25px;
+        padding: 70px;
+    }
 }
 
 @media only screen and (min-width: 950px) {
+    .bänner img {
+        width: 90%;
+    }
     .disclaimer {
         display: block;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 300;
-        font-size: 18px;
-        letter-spacing: 2px;
-        line-height: 24px;
-        color: #ffffff;
-        text-transform: uppercase;
-        float: left;
-        margin: 0 80px;
     }
-    .disclaimer span {
-        font-style: italic;
+    .disclaimer img {
+        width: 150%;
+
     }
+    .container_2 {
+        display: flex;
+        justify-content: space-evenly;
+        padding-left: 7%;
+        padding-right: 18%;
+    }
+    hr {
+        display: none;
+    }
+    .gallery-h2{
+        padding-left: 10%;
+    }
+    .index-header{
+        display: none;
+    }
+    .gallery-links{
+        padding-top: 5%;
+    }
+
 }
